--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "snowpack dev",
-    "build": "snowpack build"
+    "build": "esbuild index.js --bundle --outfile=./gh-pages/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tmcw/togeojson": "^4.2.0",
     "dayjs": "^1.10.4",
+    "esbuild": "^0.11.2",
     "geolib": "^3.3.1",
     "timediff": "^1.1.1",
     "tinygradient": "^1.1.2"
